<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rtrk.pnrs1.ra87_2014.task">

    <EditText
        android:layout_weight="2"
        android:gravity="center"
        android:id="@+id/task_name"
        android:hint="@string/task_name"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <EditText
        android:layout_weight="4"
        android:gravity="center"
        android:hint="@string/task_desc"
        android:id="@+id/task_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <ScrollView
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></TimePicker>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"></DatePicker>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">

        <CheckBox
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:gravity="center_vertical"
            android:layout_weight="9"
            android:layout_width="0dp"
            android:text="@string/check_box"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/red_button"
            android:background="@android:color/holo_red_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/orange_button"
            android:background="@android:color/holo_orange_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/green_button"
            android:background="@android:color/holo_green_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/add_button"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>
